--- a/legatrice/templates/home.html
+++ b/legatrice/templates/home.html
@@ -4,10 +4,8 @@
             {{ form.as_p }}  
             <button type="submit" class="save btn btn-default">Save</button>  
     </form>
-         {% for key, value in legalities.items %}
-                <tr>
-                        <td> {{ key }}: </td> 
-                        <td> {{ value }} </td>
-                </tr>
-        {% endfor %}
+
+        {% if legalities %}
+                <div>{{legalities}}</div>
+        {% endif %}
 </body>  
